# GraphDrawing

./: .gitignore  CMakeLists.txt  Makefile  README.md  artist  far_test.ipynb  gd_experiments.py  gen.py  render.py  render3d.py  requirements.txt  test.ipynb
artist.dSYM/Contents/: Info.plist
artist.dSYM/Contents/Resources/DWARF/: artist
artist.dSYM/Contents/Resources/Relocations/aarch64/: artist.yml
samples/: dataset.json
src/app/: artist.cpp
src/core/: Embedding.cpp  Embedding.h  Errors.h  Graph.cpp  Graph.h  InitialPlacement.cpp  InitialPlacement.h  Projection.cpp  Projection.h  Space.cpp  Space.h  template.h
src/io/: Config.cpp  Config.h  EmbeddingWriter.cpp  EmbeddingWriter.h  JsonGraphReader.cpp  JsonGraphReader.h
src/layouts/: FruchtermanAndReingold.cpp  FruchtermanAndReingold.h  Layout.cpp  Layout.h  RandomLayout.cpp  RandomLayout.h
src/metrics/: Metrics.cpp  Metrics.h
src/projections/: Projection.cpp  Projection.h
src/spaces/: EuclideanSpace.cpp  EuclideanSpace.h  Space.cpp  Space.h
